include/ciaaw_saw_2021.h

/** @brief C API Object representing an element.*/
struct ciaaw_saw_element_t_2021{
    char element[25]; /**< Element name. */
    char symbol[9]; /**< Element symbol. */
    int z; /**< Element atomic number. */
    double saw_min; /**< Min standard atomic weight. */
    double saw_max; /**< Max standard atomic weight. */
    double saw; /**< Value standard atomic weight. */
    double saw_u; /**< Uncertainty standard atomic weight. */
    double asaw; /**< Abridged value standard atomic weight. */
    double asaw_u; /**< Abridged uncertainty standard atomic weight. */
};
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_K_2021;/**< C API K_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ca_2021;/**< C API Ca_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Sc_2021;/**< C API Sc_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ti_2021;/**< C API Ti_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_V_2021;/**< C API V_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cr_2021;/**< C API Cr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Mn_2021;/**< C API Mn_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Fe_2021;/**< C API Fe_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Co_2021;/**< C API Co_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ni_2021;/**< C API Ni_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Cu_2021;/**< C API Cu_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Zn_2021;/**< C API Zn_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ga_2021;/**< C API Ga_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Ge_2021;/**< C API Ge_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_As_2021;/**< C API As_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Se_2021;/**< C API Se_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Br_2021;/**< C API Br_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Kr_2021;/**< C API Kr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Rb_2021;/**< C API Rb_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Sr_2021;/**< C API Sr_2021.*/
ADD_IMPORT extern const struct ciaaw_saw_element_t_2021 ciaaw_saw_Y_2021;/**< C API Y_2021.*/