src/ciaaw_saw_2021.f90


!> potassium.
type(element_t_2021), parameter, public :: K_2021 =&
element_t_2021("potassium","K", 19, nan, nan, 39.0983d0, 0.0001d0, 39.098d0, 0.001d0)
!> C API potassium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_K_2021") :: capi_K_2021 =&
capi_element_t_2021(&
["p","o","t","a","s","s","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["K",c_null_char, " "," "," "," "," "," "," "], &
K_2021%z, &
K_2021%saw_max, K_2021%saw_min, K_2021%saw, K_2021%saw_u, K_2021%asaw, K_2021%asaw_u)

!> calcium.
type(element_t_2021), parameter, public :: Ca_2021 =&
element_t_2021("calcium","Ca", 20, nan, nan, 40.078d0, 0.004d0, 40.078d0, 0.004d0)
!> C API calcium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ca_2021") :: capi_Ca_2021 =&
capi_element_t_2021(&
["c","a","l","c","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","a",c_null_char, " "," "," "," "," "," "], &
Ca_2021%z, &
Ca_2021%saw_max, Ca_2021%saw_min, Ca_2021%saw, Ca_2021%saw_u, Ca_2021%asaw, Ca_2021%asaw_u)

!> scandium.
type(element_t_2021), parameter, public :: Sc_2021 =&
element_t_2021("scandium","Sc", 21, nan, nan, 44.955907d0, 0.000004d0, 44.956d0, 0.001d0)
!> C API scandium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Sc_2021") :: capi_Sc_2021 =&
capi_element_t_2021(&
["s","c","a","n","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","c",c_null_char, " "," "," "," "," "," "], &
Sc_2021%z, &
Sc_2021%saw_max, Sc_2021%saw_min, Sc_2021%saw, Sc_2021%saw_u, Sc_2021%asaw, Sc_2021%asaw_u)

!> titanium.
type(element_t_2021), parameter, public :: Ti_2021 =&
element_t_2021("titanium","Ti", 22, nan, nan, 47.867d0, 0.001d0, 47.867d0, 0.001d0)
!> C API titanium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ti_2021") :: capi_Ti_2021 =&
capi_element_t_2021(&
["t","i","t","a","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["T","i",c_null_char, " "," "," "," "," "," "], &
Ti_2021%z, &
Ti_2021%saw_max, Ti_2021%saw_min, Ti_2021%saw, Ti_2021%saw_u, Ti_2021%asaw, Ti_2021%asaw_u)

!> vanadium.
type(element_t_2021), parameter, public :: V_2021 =&
element_t_2021("vanadium","V", 23, nan, nan, 50.9415d0, 0.0001d0, 50.942d0, 0.001d0)
!> C API vanadium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_V_2021") :: capi_V_2021 =&
capi_element_t_2021(&
["v","a","n","a","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["V",c_null_char, " "," "," "," "," "," "," "], &
V_2021%z, &
V_2021%saw_max, V_2021%saw_min, V_2021%saw, V_2021%saw_u, V_2021%asaw, V_2021%asaw_u)

!> chromium.
type(element_t_2021), parameter, public :: Cr_2021 =&
element_t_2021("chromium","Cr", 24, nan, nan, 51.9961d0, 0.0006d0, 51.996d0, 0.001d0)
!> C API chromium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cr_2021") :: capi_Cr_2021 =&
capi_element_t_2021(&
["c","h","r","o","m","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","r",c_null_char, " "," "," "," "," "," "], &
Cr_2021%z, &
Cr_2021%saw_max, Cr_2021%saw_min, Cr_2021%saw, Cr_2021%saw_u, Cr_2021%asaw, Cr_2021%asaw_u)

!> manganese.
type(element_t_2021), parameter, public :: Mn_2021 =&
element_t_2021("manganese","Mn", 25, nan, nan, 54.938043d0, 0.000002d0, 54.938d0, 0.001d0)
!> C API manganese.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Mn_2021") :: capi_Mn_2021 =&
capi_element_t_2021(&
["m","a","n","g","a","n","e","s","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["M","n",c_null_char, " "," "," "," "," "," "], &
Mn_2021%z, &
Mn_2021%saw_max, Mn_2021%saw_min, Mn_2021%saw, Mn_2021%saw_u, Mn_2021%asaw, Mn_2021%asaw_u)

!> iron.
type(element_t_2021), parameter, public :: Fe_2021 =&
element_t_2021("iron","Fe", 26, nan, nan, 55.845d0, 0.002d0, 55.845d0, 0.002d0)
!> C API iron.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Fe_2021") :: capi_Fe_2021 =&
capi_element_t_2021(&
["i","r","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["F","e",c_null_char, " "," "," "," "," "," "], &
Fe_2021%z, &
Fe_2021%saw_max, Fe_2021%saw_min, Fe_2021%saw, Fe_2021%saw_u, Fe_2021%asaw, Fe_2021%asaw_u)

!> cobalt.
type(element_t_2021), parameter, public :: Co_2021 =&
element_t_2021("cobalt","Co", 27, nan, nan, 58.933194d0, 0.000003d0, 58.933d0, 0.001d0)
!> C API cobalt.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Co_2021") :: capi_Co_2021 =&
capi_element_t_2021(&
["c","o","b","a","l","t",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","o",c_null_char, " "," "," "," "," "," "], &
Co_2021%z, &
Co_2021%saw_max, Co_2021%saw_min, Co_2021%saw, Co_2021%saw_u, Co_2021%asaw, Co_2021%asaw_u)

!> nickel.
type(element_t_2021), parameter, public :: Ni_2021 =&
element_t_2021("nickel","Ni", 28, nan, nan, 58.6934d0, 0.0004d0, 58.693d0, 0.001d0)
!> C API nickel.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ni_2021") :: capi_Ni_2021 =&
capi_element_t_2021(&
["n","i","c","k","e","l",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["N","i",c_null_char, " "," "," "," "," "," "], &
Ni_2021%z, &
Ni_2021%saw_max, Ni_2021%saw_min, Ni_2021%saw, Ni_2021%saw_u, Ni_2021%asaw, Ni_2021%asaw_u)

!> copper.
type(element_t_2021), parameter, public :: Cu_2021 =&
element_t_2021("copper","Cu", 29, nan, nan, 63.546d0, 0.003d0, 63.546d0, 0.003d0)
!> C API copper.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Cu_2021") :: capi_Cu_2021 =&
capi_element_t_2021(&
["c","o","p","p","e","r",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["C","u",c_null_char, " "," "," "," "," "," "], &
Cu_2021%z, &
Cu_2021%saw_max, Cu_2021%saw_min, Cu_2021%saw, Cu_2021%saw_u, Cu_2021%asaw, Cu_2021%asaw_u)

!> zinc.
type(element_t_2021), parameter, public :: Zn_2021 =&
element_t_2021("zinc","Zn", 30, nan, nan, 65.38d0, 0.02d0, 65.38d0, 0.02d0)
!> C API zinc.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Zn_2021") :: capi_Zn_2021 =&
capi_element_t_2021(&
["z","i","n","c",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Z","n",c_null_char, " "," "," "," "," "," "], &
Zn_2021%z, &
Zn_2021%saw_max, Zn_2021%saw_min, Zn_2021%saw, Zn_2021%saw_u, Zn_2021%asaw, Zn_2021%asaw_u)

!> gallium.
type(element_t_2021), parameter, public :: Ga_2021 =&
element_t_2021("gallium","Ga", 31, nan, nan, 69.723d0, 0.001d0, 69.723d0, 0.001d0)
!> C API gallium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ga_2021") :: capi_Ga_2021 =&
capi_element_t_2021(&
["g","a","l","l","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","a",c_null_char, " "," "," "," "," "," "], &
Ga_2021%z, &
Ga_2021%saw_max, Ga_2021%saw_min, Ga_2021%saw, Ga_2021%saw_u, Ga_2021%asaw, Ga_2021%asaw_u)

!> germanium.
type(element_t_2021), parameter, public :: Ge_2021 =&
element_t_2021("germanium","Ge", 32, nan, nan, 72.630d0, 0.008d0, 72.630d0, 0.008d0)
!> C API germanium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Ge_2021") :: capi_Ge_2021 =&
capi_element_t_2021(&
["g","e","r","m","a","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["G","e",c_null_char, " "," "," "," "," "," "], &
Ge_2021%z, &
Ge_2021%saw_max, Ge_2021%saw_min, Ge_2021%saw, Ge_2021%saw_u, Ge_2021%asaw, Ge_2021%asaw_u)

!> arsenic.
type(element_t_2021), parameter, public :: As_2021 =&
element_t_2021("arsenic","As", 33, nan, nan, 74.921595d0, 0.000006d0, 74.922d0, 0.001d0)
!> C API arsenic.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_As_2021") :: capi_As_2021 =&
capi_element_t_2021(&
["a","r","s","e","n","i","c",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["A","s",c_null_char, " "," "," "," "," "," "], &
As_2021%z, &
As_2021%saw_max, As_2021%saw_min, As_2021%saw, As_2021%saw_u, As_2021%asaw, As_2021%asaw_u)

!> selenium.
type(element_t_2021), parameter, public :: Se_2021 =&
element_t_2021("selenium","Se", 34, nan, nan, 78.971d0, 0.008d0, 78.971d0, 0.008d0)
!> C API selenium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Se_2021") :: capi_Se_2021 =&
capi_element_t_2021(&
["s","e","l","e","n","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","e",c_null_char, " "," "," "," "," "," "], &
Se_2021%z, &
Se_2021%saw_max, Se_2021%saw_min, Se_2021%saw, Se_2021%saw_u, Se_2021%asaw, Se_2021%asaw_u)

!> bromine.
type(element_t_2021), parameter, public :: Br_2021 =&
element_t_2021("bromine","Br", 35, 79.901d0, 79.907d0, 79.904d0, 0.002d0, 79.904d0, 0.003d0)
!> C API bromine.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Br_2021") :: capi_Br_2021 =&
capi_element_t_2021(&
["b","r","o","m","i","n","e",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["B","r",c_null_char, " "," "," "," "," "," "], &
Br_2021%z, &
Br_2021%saw_max, Br_2021%saw_min, Br_2021%saw, Br_2021%saw_u, Br_2021%asaw, Br_2021%asaw_u)

!> krypton.
type(element_t_2021), parameter, public :: Kr_2021 =&
element_t_2021("krypton","Kr", 36, nan, nan, 83.798d0, 0.002d0, 83.798d0, 0.002d0)
!> C API krypton.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Kr_2021") :: capi_Kr_2021 =&
capi_element_t_2021(&
["k","r","y","p","t","o","n",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["K","r",c_null_char, " "," "," "," "," "," "], &
Kr_2021%z, &
Kr_2021%saw_max, Kr_2021%saw_min, Kr_2021%saw, Kr_2021%saw_u, Kr_2021%asaw, Kr_2021%asaw_u)

!> rubidium.
type(element_t_2021), parameter, public :: Rb_2021 =&
element_t_2021("rubidium","Rb", 37, nan, nan, 85.4678d0, 0.0003d0, 85.468d0, 0.001d0)
!> C API rubidium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Rb_2021") :: capi_Rb_2021 =&
capi_element_t_2021(&
["r","u","b","i","d","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["R","b",c_null_char, " "," "," "," "," "," "], &
Rb_2021%z, &
Rb_2021%saw_max, Rb_2021%saw_min, Rb_2021%saw, Rb_2021%saw_u, Rb_2021%asaw, Rb_2021%asaw_u)

!> strontium.
type(element_t_2021), parameter, public :: Sr_2021 =&
element_t_2021("strontium","Sr", 38, nan, nan, 87.62d0, 0.01d0, 87.62d0, 0.01d0)
!> C API strontium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Sr_2021") :: capi_Sr_2021 =&
capi_element_t_2021(&
["s","t","r","o","n","t","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["S","r",c_null_char, " "," "," "," "," "," "], &
Sr_2021%z, &
Sr_2021%saw_max, Sr_2021%saw_min, Sr_2021%saw, Sr_2021%saw_u, Sr_2021%asaw, Sr_2021%asaw_u)

!> yttrium.
type(element_t_2021), parameter, public :: Y_2021 =&
element_t_2021("yttrium","Y", 39, nan, nan, 88.905838d0, 0.000002d0, 88.906d0, 0.001d0)
!> C API yttrium.
type(capi_element_t_2021), protected, public, bind(C, name="ciaaw_saw_Y_2021") :: capi_Y_2021 =&
capi_element_t_2021(&
["y","t","t","r","i","u","m",c_null_char, " "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "," "], &
["Y",c_null_char, " "," "," "," "," "," "," "], &
Y_2021%z, &
Y_2021%saw_max, Y_2021%saw_min, Y_2021%saw, Y_2021%saw_u, Y_2021%asaw, Y_2021%asaw_u)
